Fix the overflow in css

--- a/css/MobileStyle.css
+++ b/css/MobileStyle.css
@@ -700,9 +700,10 @@ form button {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow-x: hidden;
   z-index: 3;
   display: none;
+
 }
 
 #popup {
